--- a/server/src/docs/asciidoc/template.adoc
+++ b/server/src/docs/asciidoc/template.adoc
@@ -15,16 +15,16 @@ include::{snippets}/template-add/request-headers.adoc[]
 include::{snippets}/template-add/request-fields.adoc[]
 
 
-== 템플릿 읽기
-
-=== 요청
-include::{snippets}/template-read/http-request.adoc[]
-include::{snippets}/template-read/path-parameters.adoc[]
-
-
-=== 응답
-include::{snippets}/template-read/http-response.adoc[]
-include::{snippets}/template-read/response-fields.adoc[]
+// == 템플릿 읽기
+//
+// === 요청
+// include::{snippets}/template-read/http-request.adoc[]
+// include::{snippets}/template-read/path-parameters.adoc[]
+//
+//
+// === 응답
+// include::{snippets}/template-read/http-response.adoc[]
+// include::{snippets}/template-read/response-fields.adoc[]
 
 == 템플릿 리스트
 
